css/app.css
/* fb blue #4267b2
fb red notification #fa3e3e
fb gray #e9ebee */


a {
    text-decoration: none; 
}

body {
    flex-direction: column;
    min-height: 100vh;
    background-color: #e9ebee;
    display: flex;
}

header {
    margin: 0 0 30px 0;
    width: 100%;
    background-color: #4267b2;
}

#fbIcon {
    padding-right: .5em;
}

#icon {
    max-width: 20px;
    max-height: 20px;
}
form {
    display: inline-block;
    /* padding-left: .5%; */
    padding-right: 10%;
}

input {
    width: 175%;
    color: gray;
    padding-left: 1em;
}

nav {
    text-align: center;
    padding: 10px 0;
    margin: 20px 0 0;
    display: inline-block;
    padding-left: 5%;
    
}

nav ul {
    list-style: none;
    margin: 0 10px;
    padding: 0;
}

nav li {
    display: inline-block;
}
nav a {
    padding: 15px 10px;
}

footer{
    text-align: center;
}

#wrapper {
    text-align: center;
    /* display: block; */
}
/* 
@media screen and (min-width: 480px) {
    header {
        text-align: center;
    }
} */

@media screen and (min-width: 660px) {
    nav {
        text-align: right;
    },
    #icon{
        text-align: left;
        display: left; 
    }
} */

